--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -60,7 +60,7 @@
             data-select2-locale="{{ select2locale }}" data-longdateformat="{{ js_long_date_format }}" class="nojs">
         <div id="wrapper">
             <nav class="navbar-static-top" role="navigation">
-                <div class="navbar navbar-inverse ">
+                <div class="navbar navbar-fixed navbar-inverse ">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle"
                                 data-toggle="collapse" data-target=".navbar-nav-collapse">
