Bank transfer: Option to remove hyphen from reference

--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/control.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/control.html
@@ -29,6 +29,6 @@
 {% else %}
     <dl class="dl-horizontal">
         <dt>{% trans "Reference code" %}</dt>
-        <dd>{{ order.full_code }}</dd>
+        <dd>{{ code }}</dd>
     </dl>
 {% endif %}
