--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -95,21 +95,6 @@
                         </a>
                     </div>
                     <ul class="nav navbar-nav navbar-top-links navbar-left hidden-xs">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-calendar"></i>
-                                <span class="event-name">{{ request.event }}</span>
-                                <span class="caret"></span></a>
-                            <ul class="dropdown-menu event-dropdown" role="menu" data-event-typeahead
-                                data-source="{% url "control:events.typeahead" %}">
-                                <li class="query-holder">
-                                    <div class="form-box">
-                                        <input type="text" class="form-control"
-                                                placeholder="{% trans "Search for events" %}"
-                                                data-typeahead-query>
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
                         {% if request.event %}
                             <li>
                                 {% if has_domain and not request.event.live %}
@@ -206,6 +191,34 @@
                         </ul>
                     </div>
                     <div class="sidebar-nav navbar-nav-collapse navbar-collapse">
+                        <div class="dropdown context-selector">
+                            {% if request.event %}
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <i class="fa fa-calendar fa-fw"></i>
+                                    <span class="event-name">{{ request.event }}</span>
+                                    <span class="caret"></span></a>
+                            {% elif request.organizer %}
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <i class="fa fa-group fa-fw"></i>
+                                    <span class="event-name">{{ request.organizer }}</span>
+                                    <span class="caret"></span></a>
+                            {% else %}
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <i class="fa fa-user fa-fw"></i>
+                                    <span class="event-name">{{ request.user }}</span>
+                                    <span class="caret"></span></a>
+                            {% endif %}
+                            <ul class="dropdown-menu event-dropdown" role="menu" data-event-typeahead
+                                data-source="{% url "control:nav.typeahead" %}">
+                                <li class="query-holder">
+                                    <div class="form-box">
+                                        <input type="text" class="form-control"
+                                               placeholder="{% trans "Search for events" %}"
+                                               data-typeahead-query>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                         <ul class="nav" id="side-menu">
                             {% block nav %}
                                 {% for nav in nav_items %}
